--- a/Front Page.page
+++ b/Front Page.page
@@ -11,3 +11,7 @@ Help page](Help#wiki-links). To create a new wiki page, just create a
 link to it and follow the link wherever it goes.
 
 This is my [website](http://abbymullen.org).
+
+Some topics:
+
+- [Barbary Wars]()
