--- a/Front Page.page
+++ b/Front Page.page
@@ -14,4 +14,8 @@ This is my [website](http://abbymullen.org).
 
 Some topics:
 
-- [Barbary Wars]()
+- [Economy]()
+- [Strategy]()
+- [Diplomacy]()
+- [Society]()
+- [Science]()
