Fleshed out org

--- a/Front Page.page
+++ b/Front Page.page
@@ -1,15 +1,21 @@
 ---
 format: Markdown
 ...
+# Welcome
+Welcome to the research wiki of Abby Mullen. Here I will be recording and organizing notes for my dissertation, tentatively titled *In the Sea of Tripoli: Maintaining Peace and War in the First Tripolitan War, 1801-1805.*
 
-
-
-Some topics:
+## Potential chapters
 
 - [Economy]()
 - [Strategy]()
 - [Diplomacy]()
 - [Society]()
 - [Science]()
+
+## Research topics
+- [Pre-war relations with European nations]()
+- [Negotation strategies]()
+
+## Reference
 - [People]()
 - [Places]()
