--- a/Front Page.page
+++ b/Front Page.page
@@ -19,3 +19,4 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 ## Reference
 - [People]()
 - [Places]()
+- [Ships]()
