--- a/Front Page.page
+++ b/Front Page.page
@@ -14,7 +14,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 
 ## Research topics
 - [Pre-war relations with European nations]()
-- [Negotation strategies]()
+- [Negotiation strategies]()
 
 ## Reference
 - [People]()
