--- a/Abbreviations.page
+++ b/Abbreviations.page
@@ -1,3 +1,3 @@
 ## Source Abbreviations
-- **BW**: U.S. Office of Naval Records and Library. Naval Documents Related to the United States Wars with the Barbary Powers. 6 vols. Washington: U.S. Govt. Print. Off., 1939.
+- **BW**: U.S. Office of Naval Records and Library. *Naval Documents Related to the United States Wars with the Barbary Powers.* 6 vols. Washington: U.S. Govt. Print. Off., 1939.
 - **ASP{}FR**: American State Papers, Volume {}, Foreign Relations
