--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -13,7 +13,9 @@
 	- Holland and Denmark: roughly $24,000-30,000 in naval stores
 	- Sweden and Venice: roughly $24,000-30,000 in money
 	- Great Britain: possibly $280,000/year (though they are embarrassed and so keep their payments hidden from the public)
+- ASP1FR1:107: John Adams to John Jay, 2/16/1786: Europeans send tribute and force simultaneously to ensure treaty is properly enforced
 
 ## Possibility of use of force
 - ASP1FR1:105: Need to have force that matches Algerine force? Or do we just need a force to match some, since they rarely travel/cruise in unison?
 	- Suggests a blockade using a single or a few vessels in front of Algiers during 8 temperate months, as Portugal has done before Gibraltar
+- ASP1FR1:107: Richard O'Brien to TJ, 6/13/1789: Sees treaty-making with Algiers as impolitic while they take so many liberties with the treaties they already have
