--- a/Economy.page
+++ b/Economy.page
@@ -23,3 +23,10 @@
         - Results: "Our navigation, then, into the Mediterranean has not been resumed at all since the peace. The sole obstacle has been the unprovoked war of Algiers, and the sole remedy must be to bring that war to an end, or to palliate its effects." {We know this is not strictly true---commerce does resume, but there don't appear to be any more official accountings of it}
         - Perceived differences between American trade and European trade: Europeans mostly have other entry points into the Med, but Americans must go through the Straits of Gibraltar no matter where their final destination (added vulnerability)
 	        - Payment scheme of European nations: "in this instance counting their interest more than their honor"
+	        
+- ASP2FR2:462: James Leander Cathcart to Secretary of State, 4 July 1802
+    - Extent of commerce: Cathcart says it is better than it has ever been--and more vulnerable
+        - Up to 24 American ships in Leghorn at once in 1801, 2/3 unarmed
+	- Cathcart therefore suggests that American ships must travel in convoy past Gibraltar (possibly with Swedish protection if no American protection is available)
+
+- [Possible hint at how important Med commerce is:](http://infoweb.newsbank.com.ezproxy.bpl.org/iw-search/we/HistArchive/?p_product=EANX&p_theme=ahnp&p_nbid=S61N4ENEMTQ0MzQ0MzY1NC4yNjM1MDk6MToxMzoxOTIuODAuNjUuMTE2&p_action=doc&s_lastnonissuequeryname=5&d_viewref=search&p_queryname=5&p_docnum=43&p_docref=v2:109E8167B4F23EB8@EANX-10BC2AE497A4D370@2377074-10BC2AE80781F388@2-10BC2AE90EF1B6D0@From%20Lisbon)
