--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -15,7 +15,14 @@
 	- Great Britain: possibly $280,000/year (though they are embarrassed and so keep their payments hidden from the public)
 - ASP1FR1:107: John Adams to John Jay, 2/16/1786: Europeans send tribute and force simultaneously to ensure treaty is properly enforced
 
-## Possibility of use of force
+## Use of force
 - ASP1FR1:105: Need to have force that matches Algerine force? Or do we just need a force to match some, since they rarely travel/cruise in unison?
 	- Suggests a blockade using a single or a few vessels in front of Algiers during 8 temperate months, as Portugal has done before Gibraltar
 - ASP1FR1:107: Richard O'Brien to TJ, 6/13/1789: Sees treaty-making with Algiers as impolitic while they take so many liberties with the treaties they already have
+
+# Use of payment
+## Price of settlement
+- BW1:149: Joel Barlow to Secretary of State, 20 April 1796: "One ship a year taken by them [Algiers] would amount to a sum equal to maintaining a peace. And they have taken in this way enough to average one ship a year since the American war."
+
+## Benefits of settlement
+
