--- a/People.page
+++ b/People.page
@@ -1,3 +1,25 @@
-# People in the sources
-
+# United States
+## Diplomats
 - [Cathcart, James Leander]()
+
+## U.S. Navy
+
+## Politicians
+
+# Europe
+## Great Britain
+
+## France
+
+## Denmark
+
+## Sweden
+
+# Barbary States
+## Algiers
+
+## Morocco
+
+## Tripoli
+
+## Tunis
