--- a/People.page
+++ b/People.page
@@ -1,11 +1,13 @@
 # United States
 ## Diplomats
-- [Cathcart, James Leander]()
+- [James Leander Cathcart]()
 - [Richard O'Brien]()
+- [John Lamb]()
 
 ## U.S. Navy
 
 ## Politicians
+- [Thomas Jefferson]()
 
 # Europe
 ## Great Britain
