--- a/Pre-war relations with European nations.page
+++ b/Pre-war relations with European nations.page
@@ -3,11 +3,15 @@ Leading a newly formed nation, with no military to speak of and no way to protec
 In the 1780s and 1790s, several different perspectives emerged about how the United States related to Europe.
 
 ## Conspiracy against America
+- BW1:2: [Richard O'Brien]() to [Thomas Jefferson](), 8 June 1786: "It is not the interest of any commercial nation that the Americans should obtain a peace with the Barbary States, whilst they reap such benefits in being the carriers of our commerce, particularly the English, French & Spanish being jealous of us."
+
 - BW1:48: Edward Church to Sec of State, 12 October 1793, in re: Portuguese treaty with Algiers: "The Conduct of the british in this business leaves no room to doubt, or mistake their object, which was evidently aimed at Us, and proves that their envy, jealousy, and hatred, will never be appeased, and that they will leave nothing unattempted to effect our ruin, - as a farther confirmation it is worthy of remark, that the same british Agent obtained a Truce at the same time between the States of Holland and the Dey, for Six Months, whereby We and the Eanse towns are now left the only prey to those Barbarians. . . . I have reason to fear that there is an infernal combination in Europe against Us, France excepted, - and that we have no other hope or resource but in our own Strength."
 
 - BW1:207: Joel Barlow to Secretary of State, 18 August 1797: Further speculation about a European conspiracy to force USA out of the Mediterranean because of their success in dealing with Barbary
 
 ### Britain as instigator of hostility
+- BW1:2: [Richard O'Brien]() to [Thomas Jefferson](), 8 June 1786: "I have reason to suspect that the Dey had a hint conveyed to him by the British Consul, who you may be assured is an inveterate enemy to the Americans."
+
 - BW1:66: Nathaniel Cutting to Sec of State, 10 February 1793: "I am fully of opinion that the English Government has been the principal and primary cause that our mission to Algiers has proved abortive. The Portugueze Cabinet of itself has had but little hand in bringing about the melancholly catastrophe which has added so greatly to the number of our suffering Citizens - to the actual loss of property as well as to the general injury of our Trade."
 
 ### Motives for uncharitable behavior
