--- a/Front Page.page
+++ b/Front Page.page
@@ -16,6 +16,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Pre-war relations with European nations]()
 - [Negotiation strategies]()
 - [Captivity]()
+- [Role of religion]()
 
 ## Reference
 - [People]()
