Barclay's orders about Chiappi

--- a/Francisco Chiappi.page
+++ b/Francisco Chiappi.page
@@ -1,1 +1,2 @@
-Secretary to the emperor of Morocco
+## Secretary to the emperor of Morocco
+- BW1:30: Thomas Barclay told to treat Chiappi with favor and care but not to allow him to go outside the bounds of diplomatic procedure
