--- a/Alli Hassan.page
+++ b/Alli Hassan.page
@@ -1,2 +1,3 @@
 ## Dey of Algiers (succeeded 24 April 1791)
 - Succeeded Mahomet
+- BW1:32-33: [Robert Montgomery]() has a high opinion of Alli's integrity and skill as a leader
