--- a/Thomas Barclay.page
+++ b/Thomas Barclay.page
@@ -1,2 +1,3 @@
 ## U.S. Consul at Morocco (appointed 13 May 1791)
 - First tasked in Morocco with renegotiating a peace treaty with new emperor of Morocco after his father died
+- Died sometime in 1792
