--- a/Thomas Barclay.page
+++ b/Thomas Barclay.page
@@ -1,3 +1,3 @@
 ## U.S. Consul at Morocco (appointed 13 May 1791)
 - First tasked in Morocco with renegotiating a peace treaty with new emperor of Morocco after his father died
-- Died sometime in 1792
+- Died sometime in 1792---David Humphreys takes over the Algiers mission Barclay was supposed to complete
