--- a/Captivity.page
+++ b/Captivity.page
@@ -6,3 +6,7 @@
     - Benjamin McDonough claimed 2 officers and a seaman as British subjects and freed them
     - 2 more captives released as foreigners
 
+## Samuel Calder
+- BW1:54: Samuel Calder to House of Dominick Terry and Co., 3 November 1793
+    - Captured and brought to Algiers, 8 October 1793
+
