--- a/People.page
+++ b/People.page
@@ -34,5 +34,5 @@
 ## Tunis
 
 # Commercial houses
-- [Bulkley and Co.]()
-- [Dominick Terry and Co.]()
+- [Bulkley and Co]()
+- [Dominick Terry and Co]()
