--- a/Dominick Terry and Co.page
+++ b/Dominick Terry and Co.page
@@ -1,2 +1,3 @@
 - Cadiz, Spain
-- 
+- Bank for [Samuel Calder]()
+- BW1:54-55: Peter Walsh of the house working in a semi-consul role in informing Sec of State of comings and goings of American vessels in Cadiz
