--- a/Science.page
+++ b/Science.page
@@ -3,3 +3,6 @@
 - BW1:16-17: 17 April 1787: letter from [Richard O'Brien]() indicates that he thinks his crew are all going to die of the plague, especially if they continue to be assigned hard labor
     - Over the last three months, 200 Christian slaves died from the plague
     - One of O'Brien's crew had died already, and one had survived a bout of plague (with buboes)
+
+## Disease in the United States
+- BW1:342: Sec of State to William Eaton, 11 January 1800: "The Brig Sophia arrived with your dispatches the latter end of August, when the yellow fever had again obliged the public officers to remove from this city. New York was visited with the same disease at the same time; and the inhabitants of both cities generally removed into the country; whereby business was suspended. We returned hither the beginning of November."
