--- a/Role of religion.page
+++ b/Role of religion.page
@@ -3,3 +3,6 @@
 
 ## Use of terminology
 - "Christian" appears to be simply a designation for non-Barbary --- "Christian nations," etc., with more of a broad cultural connection than a specifically religious one
+
+## Religious proof-texting for diplomacy's sake
+- BW1:350: [Richard O'Brien](), 13 March 1800: "The Swede dean and American Consuls agreed to give as a present. to the head Turkish Priest or Bishop of Algiers To The amount of 1200 dollars a t the rate of 400 dollars each of The 3 Consuls. for the Bishop to find out a part of The Koran which required Musselmen not to persicute Christians at peace with them. This was to cleare The Spanish Consul of Chains and to give Security to ourselves on the like Occasions."
