--- a/Front Page.page
+++ b/Front Page.page
@@ -18,6 +18,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Captivity]()
 - [Role of religion]()
 - [Gender]()
+- [Honor]()
 
 ## Reference
 - [People]()
