Scandinavian alliance suggested

--- a/Pre-war relations with European nations.page
+++ b/Pre-war relations with European nations.page
@@ -29,6 +29,7 @@ In the 1780s and 1790s, several different perspectives emerged about how the Uni
 
 ## Scandinavian countries: generally friendly
 - BW1:273: Secretary of State to James Leander Cathcart, 20 December 1798: "You know the opposing interests of the European nations in regard to the Barbary states, and thence how little the sincere aid of their Consuls is to be relied on: yet you know that we experienced the friendship of the Swedes at Algiers, and the Spanis[h] Consul, Gerardo Joseph de Souza at Tripoli, has manifested by his acts such good will to the United States as to merit the warmest acknowledgements from the Government."
+- BW1:364: Sec of State to [John Quincy Adams](), 24 July 1800: minister of Sweden suggests military alliance between Denmark, Sweden, and USA for purposes of protecting commerce; president unwilling to make such an alliance while USA is not officially at war in Barbary
 
 ## Need to work with Europe
 - BW1:10: John Adams to Thomas Jefferson, 11 July 1786, "1. Justice is in favor of this opinion. 2. Honor favors it. 3. It will procure us respect in Europe; and respect is a safeguard to interest."
