--- a/Honor.page
+++ b/Honor.page
@@ -1,2 +1,5 @@
 ## Tribute payments as dishonorable
 - BW1:358: [William Eaton]() to Sec of State, 23 June 1800: "Nobody here, acquainted with our concessions, could be persuaded that we are the same Americans who, twenty years ago, braved the resentment of Great Britain, if that fact were not recorded. There is, indeed, no nation so much humiliated in matters of tribute - And it is a burlesque upon every thing manly or political to see nations pouring into the ports of these kingdoms, which have not of their own produce a single article of naval material, stores and builders to construct navies to be employed as pirates against themselves - In this list of inconsentents the U States at present have the honor to stand at the head"
+
+## *George Washington*'s journey
+- BW1:366: Sec of Navy to [William Bainbridge](), 31 July 1800: "You should on your arrival before Algiers, send an Officer on shore with the letter to M: OBrien, whose advice you will follow on the subject of saluting the city, and every other matter, not degrading to yourself, or the flag of the U. States."
