--- a/Catherine.page
+++ b/Catherine.page
@@ -6,4 +6,5 @@
 ## History
 - Origin: New York
 - Intended destination: Leghorn
-- 
+- Captured by Tripolitan polacre *Tripolino*, commanded by [Raiz Amor Shelli](), September 25, 1800
+- Sent to Tripoli; arrived October 15, 1800
