--- a/Honor.page
+++ b/Honor.page
@@ -3,3 +3,4 @@
 
 ## *George Washington*'s journey
 - BW1:366: Sec of Navy to [William Bainbridge](), 31 July 1800: "You should on your arrival before Algiers, send an Officer on shore with the letter to M: OBrien, whose advice you will follow on the subject of saluting the city, and every other matter, not degrading to yourself, or the flag of the U. States."
+- BW1:378: ship's journal, 9 October 1800: When the decision had been made to fly the Algerine flag on the ship's journey to Constantinople, "some tears fell at this Instance of national Humility."
