--- a/House of Bacri.page
+++ b/House of Bacri.page
@@ -1,1 +1,2 @@
 - BW1:349: 12 March 1800: [Richard O'Brien]() used the house of Bacri as a lending house to get enough money to pay off the dey of Algiers and others
+- BW1:393: Bacri listed as being the "Broker or Banker of [the] U S"
