--- a/House of Bacri.page
+++ b/House of Bacri.page
@@ -1,2 +1,4 @@
 - BW1:349: 12 March 1800: [Richard O'Brien]() used the house of Bacri as a lending house to get enough money to pay off the dey of Algiers and others
 - BW1:393: [Micaiah Cohen Bacri]() listed as being the "Broker or Banker of [the] U S"
+    - BW1:393: [James Leander Cathcart](), 29 October 1800: [Hamet Raiz]() told the bashaw that the USA had paid the Bacris $100,000 to influence him, which wasn't true but caused quite a stir in the courts because the bashaw saw it as treating a Jew with more care and honor than the ruler of Tripoli
+    - BW1:394: Bashaw believes [Hamet Raiz]() rather than Cathcart
