keeping the peace

--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -32,3 +32,5 @@
 - [Tripoli]()
 - [Morocco]()
 
+# Keeping the peace
+- BW1:394-95: [James Leander Cathcart] to Charles Lee, sec of state, 1 November 1800: Cathcart petitioned the dey of Algiers to intervene against Tripoli's breaking their treaty with the USA, but does not express much hope that anything will be done
