--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -33,4 +33,4 @@
 - [Morocco]()
 
 # Keeping the peace
-- BW1:394-95: [James Leander Cathcart] to Charles Lee, sec of state, 1 November 1800: Cathcart petitioned the dey of Algiers to intervene against Tripoli's breaking their treaty with the USA, but does not express much hope that anything will be done
+- BW1:394-95: [James Leander Cathcart]() to Charles Lee, sec of state, 1 November 1800: Cathcart petitioned the dey of Algiers to intervene against Tripoli's breaking their treaty with the USA, but does not express much hope that anything will be done
