--- a/Economy.page
+++ b/Economy.page
@@ -24,6 +24,8 @@
         - Perceived differences between American trade and European trade: Europeans mostly have other entry points into the Med, but Americans must go through the Straits of Gibraltar no matter where their final destination (added vulnerability)
 	        - Payment scheme of European nations: "in this instance counting their interest more than their honor"
 	        
+- BW1:397: [William Eaton]() to Sec of State, 1 November 1800: "The commerce of the United States in the Mediterranean, Mr. Appleton at Leghorn says, is nearly equal to that of all other carrying trades." [Surely he doesn't mean all the others put together?] 	        
+	        
 - ASP2FR2:462: James Leander Cathcart to Secretary of State, 4 July 1802
     - Extent of commerce: Cathcart says it is better than it has ever been--and more vulnerable
         - Up to 24 American ships in Leghorn at once in 1801, 2/3 unarmed
