--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -19,6 +19,7 @@
 - ASP1FR1:105: Need to have force that matches Algerine force? Or do we just need a force to match some, since they rarely travel/cruise in unison?
 	- Suggests a blockade using a single or a few vessels in front of Algiers during 8 temperate months, as Portugal has done before Gibraltar
 - ASP1FR1:107: Richard O'Brien to TJ, 6/13/1789: Sees treaty-making with Algiers as impolitic while they take so many liberties with the treaties they already have
+- BW1:401: [William Bainbridge]() to Sec of Navy, 17 November 1800: "I do not hesitate in saying, that 6 or 8 frigates in the Mediterranean Sea, would give us more permanent security, than any Treaty that can be made with the States of Barbary."
 
 # Use of payment
 ## Price of settlement
