influence in Algiers

--- a/House of Bacri.page
+++ b/House of Bacri.page
@@ -2,3 +2,5 @@
 - BW1:393: [Micaiah Cohen Bacri]() listed as being the "Broker or Banker of [the] U S"
     - BW1:393: [James Leander Cathcart](), 29 October 1800: [Hamet Raiz]() told the bashaw that the USA had paid the Bacris $100,000 to influence him, which wasn't true but caused quite a stir in the courts because the bashaw saw it as treating a Jew with more care and honor than the ruler of Tripoli
     - BW1:394: Bashaw believes [Hamet Raiz]() rather than Cathcart
+
+- BW1:411: [Richard O'Brien](), 10 January 1801: Bacri and Busnach have great influence in Algiers, so much that they made peace with France in Algiers against the wishes of the Ottoman Grand Signior, and muddy the diplomatic waters between Britain and Algiers
