--- a/De Butts and Purviance.page
+++ b/De Butts and Purviance.page
@@ -1,2 +1,3 @@
 - Based in Leghorn, Italy
 - BW1:463: Authorized to draw on [Mackenzie and Glennie]() for funds needed for US squadron
+    - Asked to lodge letters of credit in [Palermo](), [Naples](), and [Syracuse]() on behalf of Commodore [Richard Dale]()
