purpose of cruise

--- a/Strategy.page
+++ b/Strategy.page
@@ -3,3 +3,6 @@ instructions to our young Officers or to carry into Execution the Law fixing the
 
 ## Stores
 - One of the key elements of the blockade is having enough supplies; where do these supplies come from?
+
+## Purpose of cruises
+- [Instruction]()
