--- a/Strategy.page
+++ b/Strategy.page
@@ -6,3 +6,5 @@ instructions to our young Officers or to carry into Execution the Law fixing the
 
 ## Purpose of cruises
 - [Instruction]()
+- [Deterrence]()
+- [Encouragement]()
