--- a/Strategy.page
+++ b/Strategy.page
@@ -4,7 +4,8 @@ instructions to our young Officers or to carry into Execution the Law fixing the
 ## Stores
 - One of the key elements of the blockade is having enough supplies; where do these supplies come from?
 
-## Purpose of cruises
+# Purpose of cruises
+## Cruise 1 ([Richard Dale]())
 - [Instruction]()
 - [Deterrence]()
 - [Encouragement]()
