--- a/Strategy.page
+++ b/Strategy.page
@@ -3,6 +3,7 @@ instructions to our young Officers or to carry into Execution the Law fixing the
 
 ## Stores
 - One of the key elements of the blockade is having enough supplies; where do these supplies come from?
+- [Storage in the Mediterranean]()
 
 # Purpose of cruises
 ## Cruise 1 ([Richard Dale]())
