--- a/Front Page.page
+++ b/Front Page.page
@@ -14,6 +14,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 
 ## Research topics
 - [Pre-war relations with European nations]()
+- [War relations with European nations]()
 - [Negotiation strategies]()
 - [Captivity]()
 - [Role of religion]()
