--- a/Captivity.page
+++ b/Captivity.page
@@ -10,3 +10,7 @@
 - BW1:54: Samuel Calder to House of Dominick Terry and Co., 3 November 1793
     - Captured and brought to Algiers, 8 October 1793
 
+# Captivity negotiations
+Unable to negotiate for themselves because of lack of diplomatic standing with Tripoli, the USA had to rely on others to negotiate for captives' freedom and comfort
+## Sweden
+- BW1:469: "Should the Barbary Powers or either of them have made Captives of any of our Citizens, you will endeavor through the Swedish consul to afford them usual relief & comfort; for which purpose you are authorized to furnish, from the money you will have on board, or from your credit, what sum you may deem necessary."
