--- a/Strategy.page
+++ b/Strategy.page
@@ -7,6 +7,8 @@ instructions to our young Officers or to carry into Execution the Law fixing the
 
 # Purpose of cruises
 ## Cruise 1 ([Richard Dale]())
+In the orders of this cruise, it seems pretty clear that the government feels it likely that the temporary declaration of war with Tripoli will be revoked by the time the squadron gets there; hence the couching of the orders mostly in terms of instruction and encouragement--the president and secretary of the navy genuinely think a blockade will not be necessary. (See BW1:471, Secretary of State to [Rufus King](), 21 May 1801)
+
 - [Instruction]()
 - [Deterrence]()
 - [Encouragement]()
