--- a/Economy.page
+++ b/Economy.page
@@ -32,3 +32,6 @@
 	- Cathcart therefore suggests that American ships must travel in convoy past Gibraltar (possibly with Swedish protection if no American protection is available)
 
 - [Possible hint at how important Med commerce is:](http://infoweb.newsbank.com.ezproxy.bpl.org/iw-search/we/HistArchive/?p_product=EANX&p_theme=ahnp&p_nbid=S61N4ENEMTQ0MzQ0MzY1NC4yNjM1MDk6MToxMzoxOTIuODAuNjUuMTE2&p_action=doc&s_lastnonissuequeryname=5&d_viewref=search&p_queryname=5&p_docnum=43&p_docref=v2:109E8167B4F23EB8@EANX-10BC2AE497A4D370@2377074-10BC2AE80781F388@2-10BC2AE90EF1B6D0@From%20Lisbon)
+
+## Split duties
+- Not only was the navy supposed to fight the war, but they were often also called upon for convoy duty, which was purely for the peace of mind of the American merchants in the Med. 
