--- a/Ships.page
+++ b/Ships.page
@@ -2,7 +2,7 @@
 ## Navy
 - [USS *George Washington*]()
 - [USS *Philadelphia*]()
-- [USS *President]()
+- [USS *President*]()
 
 ## Commercial
 - [*Dolphin*]()
