--- a/USS Essex.page
+++ b/USS Essex.page
@@ -1,2 +1,3 @@
 ## [William Bainbridge]()
 - 4 July 1801: Ordered to Tunis with a convoy and stores for the bey (BW1:500)
+- 17 July 1801: Ordered to Barcelona to convoy American merchants down the Mediterranean (BW1:515)
