--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -4,3 +4,5 @@ The navy needed to know where they could reasonably expect a favorable reception
 - "It is expected that the Port of Gibraltar will be open to your squadron. It is not doubted but that you will be received with hospitality & friendship in the Spanish Ports of Carthagena, Barcelona & the French Port of Toulon - at Leghorn & Naples, Palermo & Syracuse - Nor is it conceived that there will be any obstacle made to your entering the Ports of Malta, now in possession of the British. Letters will be written on this subject to our several ministers & to our consuls in the Mediterranean, & other convenient Ports, to enable them to give proper explanations, & to enjoin on them the attentions & Offices they may be able to render the expedition" (BW1:468)
 
 - 29 June 1801: Hailed British fleet near Cadiz with proper ceremony (BW1:495)
+
+- 12 July 1801: American navy in Gibraltar gets to watch a battle between the English and the French off Algeciras (BW1:519)
