--- a/USS President.page
+++ b/USS President.page
@@ -1,3 +1,4 @@
 ## Richard Dale
 - Flagship for first cruise
 - At Algiers 9 July 1801, departing for Tunis that day (BW1:507)
+- Arrived Tunis 17 July 1801 (BW1:521)
