--- a/Strategy.page
+++ b/Strategy.page
@@ -14,3 +14,5 @@ This feeling of pointlessness was shared by the crew as well, e.g., [William Tur
 - [Instruction]()
 - [Deterrence]()
 - [Encouragement]()
+
+Dale wanted to keep a ship off Tripoli at all times (see BW1:521), but this desire proved impossible to fulfill.
