--- a/Strategy.page
+++ b/Strategy.page
@@ -16,4 +16,7 @@ This feeling of pointlessness was shared by the crew as well, e.g., [William Tur
 - [Deterrence]()
 - [Encouragement]()
 
-Dale wanted to keep a ship off Tripoli at all times (see BW1:521), but this desire proved impossible to fulfill.
+Dale wanted to keep a ship off Tripoli at all times (see BW1:521), but this desire proved impossible to fulfill
+
+# Blockade
+- [William Eaton]() declares a blockade on 23 July 1801 (BW1:528)
