--- a/Strategy.page
+++ b/Strategy.page
@@ -20,3 +20,8 @@ Dale wanted to keep a ship off Tripoli at all times (see BW1:521), but this desi
 
 # Blockade
 - [William Eaton]() declares a blockade on 23 July 1801 (BW1:528)
+- 
+
+# Effectiveness
+- [William Eaton]() writes, 24 July 1801, that Tripolitan government is concerned by the blockade because they don't have much food and get most of their food stores from Tunis (BW1:529)
+    - Tunis also concerned because they don't want the blockade of Tripoli to harm them
