--- a/Where to get water.page
+++ b/Where to get water.page
@@ -2,3 +2,4 @@ Dale rightly recognizes that supply limits will keep him from being able to main
 
 - BW1:522: [Richard Dale]() intends to get water at either [Malta]() or [Syracuse](), 19 July 1801, but he tells [Samuel Barron]() to get as much water and food as he can at [Port Farina]()
     - Dale estimates he can stay out for about 5 weeks before needing more water
+- BW1:530: [Samuel Barron]() had to receive a coasting pilot at Gibraltar to get water from [Tetuan]() because the governor of [Gibraltar]() would not allow warships to water there, 24 July 1801
