relations with Tripoli

--- a/Diplomacy.page
+++ b/Diplomacy.page
@@ -1,2 +1,5 @@
 ## Naval officers' relations with non-belligerent Barbary States
 - [Richard Dale](): writes to bey of Tunis and dey of Algiers to let them know of the squadron's presence and to assure them of his respect, and to commend the American consuls to them (BW1:508)
+
+## Naval officers' relations with Tripoli
+- [Richard Dale]() writes to the bashaw of Tripoli asking to know why he has declared war, but also reminding the bashaw that he as a naval commander has no power to make treaties, 28 July 1801 (BW1:533-534)
