--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -6,3 +6,5 @@ The navy needed to know where they could reasonably expect a favorable reception
 - 29 June 1801: Hailed British fleet near Cadiz with proper ceremony (BW1:495)
 
 - 12 July 1801: American navy in Gibraltar gets to watch a battle between the English and the French off Algeciras (BW1:519)
+
+- 30 July 1801: [Richard Dale]() warns [Andrew Sterett]() to make sure his men behave in [Malta](), and to obey the laws of the port (BW1:534)
