Shaw George Washington

--- a/USS George Washington.page
+++ b/USS George Washington.page
@@ -1,7 +1,9 @@
 ## Specifications
 - Captain: [William Bainbridge]()
-- 
+- Captain: [John Shaw]()
 
 ## Movements
 - Departed Philadelphia 8 August 1800
 - Arrived in Algiers 17 September 1800
+
+- 31 July 1801: Ordered to Mediterranean to convoy [*Peace and Plenty*]() to either Algiers or Tunis (BW1:535)
