--- a/Science.page
+++ b/Science.page
@@ -9,3 +9,6 @@
 
 ### Disease delays diplomacy
 - BW1:344: [John Adams]() to [Hamouda Pasha](), 15 January 1800: "With respect to the time within which you required that the stipulated stores should be delivered, I have charged Mr Eaton to explain to you the impossibility of a compliance: and will here only observe that of the six months proposed, four had elapsed when your letter and the Consuls dispatches arrived: And then a pestilence raging in some of our principal cities by causing the inhabitants to flee into the country & suspending business, rendered delays unavoidable."
+
+# Quarantine
+## [Regulations about quarantine]()
