--- a/Expectations about quarantine.page
+++ b/Expectations about quarantine.page
@@ -1,1 +1,3 @@
 - BW1:536: [William Bainbridge]() thinks warships should not be under the same constraints re: pratique as merchant ships (presumably because diseases aren't lurking in the cargo?), 30 July 1801
+    - Response to Bainbridge's query: quarantine would be at least 15 days in Marseilles
+    - Bainbridge's response: left Marseilles for a friendlier? port
