--- a/Front Page.page
+++ b/Front Page.page
@@ -20,6 +20,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Role of religion]()
 - [Gender]()
 - [Honor]()
+- [Engagements with Tripoli]()
 
 ## Reference
 - [Important dates]()
