--- a/USS Enterprise.page
+++ b/USS Enterprise.page
@@ -1,4 +1,9 @@
 Schooner
 
+## Specifications
+- 12 guns
+- 94 men
+
 ## [Andrew Sterett]()
 - Ordered to Malta for water, 30 July 1801 (BW1:534)
+- Defeated *Tripoli*, 1 August 1801 (BW1:537)
