--- a/Expectations about quarantine.page
+++ b/Expectations about quarantine.page
@@ -1,3 +1,6 @@
 - BW1:536: [William Bainbridge]() thinks warships should not be under the same constraints re: pratique as merchant ships (presumably because diseases aren't lurking in the cargo?), 30 July 1801
     - Response to Bainbridge's query: quarantine would be at least 15 days in Marseilles
     - Bainbridge's response: left Marseilles for a friendlier? port
+
+- BW1:541: [William Kirkpatrick](), consul at Malaga: "The quarantine still continues to be inforced on all Vessels from the United States, notwithstanding the repeated representations of our Minister at Madrid for the orders regarding it to be repealed, or at least modified, This disagreeable circumstance must materially reduce the Trade which was carried on direct between the United States, & this Goun-
+try, & particularly as it is only certain articles that are permitted to be landed whilst the quarantine lasts, & that not at every Port."
