--- a/Honor.page
+++ b/Honor.page
@@ -9,3 +9,6 @@
 
 ## Honor in the Barbary States
 - BW1:431: [William Eaton]() to Sec of State, 10 April 1801: "This Highwayman [the bey of Tunis] is much the most Gentlemanlike of the three. He seldom robs a man without first creating a pretext. He has some ideas of justice and not wholly destitute of a sense of shame. He is vain of the notions of integrity and honor which he imagines the nations accord to him - and in this point he is vulnerable."
+
+## Honor in sending a squadron
+- BW1:545: [James Leander Cathcart]() sees squadron's activities as the moral and honorable way to deal with the problem: "We have every opportunity of inspiring those Barbarians with an Idea that we have not sued for peace through impressions of fear & that we will not suffer our Flag to be insulted with impunity."
