--- a/Engagements with Tripoli.page
+++ b/Engagements with Tripoli.page
@@ -1,4 +1,4 @@
 ## [USS *Enterprise*]() v. *Tripoli* (BW1:537)
 - 1 August 1801
-- *Tripoli* destroyed, 20 men killed and 30 wounded (of 80-man crew)
+- *Tripoli* nearly destroyed, 20 men killed and 30 wounded (of 80-man crew)
 - *Enterprise* largely unharmed, no casualties
