--- a/Strategy.page
+++ b/Strategy.page
@@ -5,6 +5,7 @@ instructions to our young Officers or to carry into Execution the Law fixing the
 - One of the key elements of the blockade is having enough supplies; where do these supplies come from?
 - [Storage in the Mediterranean]()
 - [Where to get water]()
+- [Where to get supplies]()
 
 # Purpose of cruises
 ## Cruise 1 ([Richard Dale]())
