--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -10,3 +10,5 @@ The navy needed to know where they could reasonably expect a favorable reception
 - 30 July 1801: [Richard Dale]() warns [Andrew Sterett]() to make sure his men behave in [Malta](), and to obey the laws of the port (BW1:534)
 
 - 10 August 1801: [James Leander Cathcart]() sees a British conspiracy around every corner: "I imagine [the Tripolitan admiral] was encouraged by his friends Lucas & McDonogh who were continually intoxicated together" (BW1:545-46)
+
+- 15 August 1801: Spanish are actually the ones taking American ships, according to 2Lt. [John Johnson](), on board the [USS *Philadelphia*]() off Gibraltar (BW1:550)
