--- a/Front Page.page
+++ b/Front Page.page
@@ -21,6 +21,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Gender]()
 - [Honor]()
 - [Engagements with Tripoli]()
+- [Relations with other Barbary states]()
 
 ## Reference
 - [Important dates]()
