--- a/Where to get water.page
+++ b/Where to get water.page
@@ -4,3 +4,5 @@ Dale rightly recognizes that supply limits will keep him from being able to main
     - Dale estimates he can stay out for about 5 weeks before needing more water
 - BW1:530: [Samuel Barron]() had to receive a coasting pilot at Gibraltar to get water from [Tetuan]() because the governor of [Gibraltar]() would not allow warships to water there, 24 July 1801
     - Contra [Rufus King](), who wrote that the British were opening the stores of Gibraltar, [Malta]() and [Minorca]() to American ships of war, 24 July 1801 (BW1:531)
+
+- BW1:553: Dale sent [USS *Enterprise*] to Malta with the idea of its bringing back enough water for [USS *President*] to stay on the blockade, but *Enterprise* was unable to bring back enough water to prevent *President* from needing to leave its station (18 August 1801)
