--- a/Where to get water.page
+++ b/Where to get water.page
@@ -6,3 +6,4 @@ Dale rightly recognizes that supply limits will keep him from being able to main
     - Contra [Rufus King](), who wrote that the British were opening the stores of Gibraltar, [Malta]() and [Minorca]() to American ships of war, 24 July 1801 (BW1:531)
 
 - BW1:553: Dale sent [USS *Enterprise*]() to Malta with the idea of its bringing back enough water for [USS *President*]() to stay on the blockade, but *Enterprise* was unable to bring back enough water to prevent *President* from needing to leave its station (18 August 1801)
+    - Dale ends up at Malta as well, where he learns that though water is to be had at Malta, other supplies are not, and he recommends Syracuse as an alternative 
