--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -1,3 +1,8 @@
 One of the constant questions for the squadron was whether to get supplies from America or buy them from places in the Mediterranean. Eventually the squadron adopted a hybrid policy on this question.
 
+## From America
 - BW1:548: *American Packet* dispatched from Washington DC to Gibraltar with supplies for squadron, 14 August 1801
+
+
+## In the Mediterranean
+- BW1:553: [Richard Dale]() discovers that Malta has only water, no stores, so he recommends Syracuse as a place to get supplies
