--- a/USS Enterprise.page
+++ b/USS Enterprise.page
@@ -7,3 +7,4 @@ Schooner
 ## [Andrew Sterett]()
 - Ordered to Malta for water, 30 July 1801 (BW1:534)
 - Defeated *Tripoli*, 1 August 1801 (BW1:537)
+- Ordered to cruise off Tripoli, first calling at Syracuse to acquaint himself with the supply situation there, 18 August 1801 (BW1:554)
