peace without honor

--- a/Honor.page
+++ b/Honor.page
@@ -13,3 +13,4 @@
 
 ## Honor in sending a squadron
 - BW1:545: [James Leander Cathcart]() sees squadron's activities as the moral and honorable way to deal with the problem: "We have every opportunity of inspiring those Barbarians with an Idea that we have not sued for peace through impressions of fear & that we will not suffer our Flag to be insulted with impunity."
+- BW1:563: No peace without honor: "the United States wishes to be at Peace with all Nations but She Will not suffer her Flag to be Insulted by any Nation." ([Richard Dale](), BW1:563)
