--- a/Strategy.page
+++ b/Strategy.page
@@ -26,3 +26,4 @@ Dale wanted to keep a ship off Tripoli at all times (see BW1:521), but this desi
 # Effectiveness
 - [William Eaton]() writes, 24 July 1801, that Tripolitan government is concerned by the blockade because they don't have much food and get most of their food stores from Tunis (BW1:529)
     - Tunis also concerned because they don't want the blockade of Tripoli to harm them
+- Eaton warns Dale that the Tripolitan admiral and his crews are trying to run the blockade by going home from Gibraltar in a Greek ship they have chartered for the purpose (BW1:566)
