--- a/USS Enterprise.page
+++ b/USS Enterprise.page
@@ -8,3 +8,4 @@ Schooner
 - Ordered to Malta for water, 30 July 1801 (BW1:534)
 - Defeated *Tripoli*, 1 August 1801 (BW1:537)
 - Ordered to cruise off Tripoli, first calling at Syracuse to acquaint himself with the supply situation there, 18 August 1801 (BW1:554)
+- Ordered to Malta to pick up convoy vessels for Gibraltar, 2 September 1801 (BW1:568)
