--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -6,3 +6,4 @@ One of the constant questions for the squadron was whether to get supplies from 
 
 ## In the Mediterranean
 - BW1:553: [Richard Dale]() discovers that Malta has only water, no stores, so he recommends Syracuse as a place to get supplies
+- BW1:569: [William Bainbridge]() calls at both Malaga and Gibraltar for supplies, but he is unable to get anything but bread and meat--no preserved food (2 September 1801)
