honor before Europe

--- a/Honor.page
+++ b/Honor.page
@@ -14,3 +14,4 @@
 ## Honor in sending a squadron
 - BW1:545: [James Leander Cathcart]() sees squadron's activities as the moral and honorable way to deal with the problem: "We have every opportunity of inspiring those Barbarians with an Idea that we have not sued for peace through impressions of fear & that we will not suffer our Flag to be insulted with impunity."
 - BW1:563: No peace without honor: "the United States wishes to be at Peace with all Nations but She Will not suffer her Flag to be Insulted by any Nation." ([Richard Dale]())
+- BW1:572: Honor is important to the European community: "Your idea of bombarding the Town is an excellent one, the eyes of all Europe is upon your little Squadron, & I am certain they will reflect honor upon their Country & justify the idea already formed of American valor & intrepidity" ([James Leander Cathcart](), 7 September 1801)
