--- a/Pre-war relations with European nations.page
+++ b/Pre-war relations with European nations.page
@@ -18,6 +18,8 @@ In the 1780s and 1790s, several different perspectives emerged about how the Uni
 
 - BW1:565: [William Eaton]() outright accuses [Bryan McDonogh]() of conspiring to attack the American squadron, in violation of British treaties withe the USA, 1 September 1801
 
+- BW1:572: [Bryan McDonogh]() also castigated by [James Leander Cathcart](): "a person that would be guilty of such an act of Treason to his own Nation in consequence of a pecuniary reward, certainly would not hesitate to injure ours in hopes of ingraciating himself with our enemies, & thereby reaping a benefit, his venality is well Known by every Consul at Tripoli"
+
 ### Motives for uncharitable behavior
 - BW1:67: Nathaniel Cutting to Sec of State, 10 February 1793: "The grand principle that has hirtherto opperated upon all the maritime Powers of Europe in this business, appear to me to be not so much the offspring of fear and avarice, as of jealousy & envy. - A miserable spirit of illiberality has induced them to practice all the infamous arts of finesse rather than openly and steadily to pursue a gallant warfare against those petty villains who wantonly infringe the rights, and impede the social intercourse between different members, of "the great family of mankind"."
 - BW1:149: Joel Barlow to Secretary of State, 20 April 1796: "Louis XIV said if there was no Algiers he would build one; as it would be the cheapest way of depriving the Italian States of their natural right of navigating their own seas; a policy doubtless unworthy of us, and only fit for a king. But as long as the Powers of Europe will persist in this policy,.whether we will or not, we must either be its victims or partake of its advantages."
