water in malaga

--- a/Where to get water.page
+++ b/Where to get water.page
@@ -7,3 +7,5 @@ Dale rightly recognizes that supply limits will keep him from being able to main
 
 - BW1:553: Dale sent [USS *Enterprise*]() to Malta with the idea of its bringing back enough water for [USS *President*]() to stay on the blockade, but *Enterprise* was unable to bring back enough water to prevent *President* from needing to leave its station (18 August 1801)
     - Dale ends up at Malta as well, where he learns that though water is to be had at Malta, other supplies are not, and he recommends Syracuse as an alternative 
+    
+BW1:573: [USS *Philadelphia*]() and [USS *Essex*]() able to obtain water in Malaga after only a few hours waiting for pratique, 8 September 1801
