Blockade-running intelligence

--- a/Strategy.page
+++ b/Strategy.page
@@ -28,6 +28,7 @@ Dale wanted to keep a ship off Tripoli at all times (see BW1:521), but this desi
     - Tunis also concerned because they don't want the blockade of Tripoli to harm them
 - Eaton warns Dale that the Tripolitan admiral and his crews are trying to run the blockade by going home from Gibraltar in a Greek ship they have chartered for the purpose (BW1:566)
 - Dale tells Eaton that it's vital that the Tunisians think there is still a ship off Tripoli, even though there is not in fact a ship there (BW1:571)
+- Intelligence between ports on how the Tripolitans are trying to thwart the blockade is surprisingly good (see [James Leander Cathcart]()'s circular about the ambassador to Morocco's attempts to smuggle wheat into Tripoli, 11 September 1801, BW1:573-74)
 
 # Coup in Tripoli
 - First mention of [William Eaton]()'s plan to overthrow [Yusuf Karamanli](), 5 September 1801 (BW1:569)   
