--- a/USS Enterprise.page
+++ b/USS Enterprise.page
@@ -9,3 +9,4 @@ Schooner
 - Defeated *Tripoli*, 1 August 1801 (BW1:537)
 - Ordered to cruise off Tripoli, first calling at Syracuse to acquaint himself with the supply situation there, 18 August 1801 (BW1:554)
 - Ordered to Malta to pick up convoy vessels for Gibraltar, 2 September 1801 (BW1:568)
+- Ordered to Algiers to deliver letters to [Richard O'Brien]() and then to Gibraltar, 21 September 1801 (BW1:577)
