--- a/Samadet and Cushing.page
+++ b/Samadet and Cushing.page
@@ -1,2 +1,2 @@
 - American commercial agents at [Marseilles](), authorized by [De Butts and Purviance]() to disburse money to the navy
-    - In turn, authorized [Luce and Crassons]() at [Toulon]() (BW1:579)
+    - In turn, authorized [Luce and Crassons Cadet]() at [Toulon]() (BW1:579)
