--- a/House of Bacri.page
+++ b/House of Bacri.page
@@ -4,3 +4,5 @@
     - BW1:394: Bashaw believes [Hamet Raiz]() rather than Cathcart
 
 - BW1:411: [Richard O'Brien](), 10 January 1801: Bacri and Busnach have great influence in Algiers, so much that they made peace with France in Algiers against the wishes of the Ottoman Grand Signior, and muddy the diplomatic waters between Britain and Algiers
+
+- BW1:583: The Dey of Algiers considers the house of Bacri and Busnach as his "eyes and ears," and so will not dismiss them from his court
