Some kind of influenza

--- a/Science.page
+++ b/Science.page
@@ -12,6 +12,7 @@
 
 ## Disease in the navy
 - BW1:570: [Richard Dale]() leaves the blockade of Tripoli early because he has 152 men on the sick list
+    - First Lieutenant [Newton Keene]() records that this sicknes was "some kind of enfluensa" (BW1:584) 
 
 # Quarantine
 ## [Regulations about quarantine]()
