--- a/Strategy.page
+++ b/Strategy.page
@@ -20,6 +20,7 @@ This feeling of pointlessness was shared by the crew as well, e.g., [William Tur
 Dale wanted to keep a ship off Tripoli at all times (see BW1:521), but this desire proved impossible to fulfill
 
 # Blockade
+- [Legal definition of blockade]()
 - [William Eaton]() declares a blockade on 23 July 1801 (BW1:528)
 - [Richard Dale]() argues for a close blockade: "Should the United States Determin to carry on the War against Tripoli it will be highly necessary to keep it closly Blockaded, not to suffer any kind of Vessels, of any Nation to go in or come out, to do this it will take Two Frigates and two Sloops of War , two to be of[f] the Harbour and two to cruise along the Coast, to the Eastwd and Westward they will be under the necessity of going Into port for water &c that must be done by turns, also I think it would be advisable to have a small Vessel constructed to carry a Bomb to heave a few shells In the Town now & then" (BW1:553)
 
