--- a/Strategy.page
+++ b/Strategy.page
@@ -33,3 +33,5 @@ Dale wanted to keep a ship off Tripoli at all times (see BW1:521), but this desi
 
 # Coup in Tripoli
 - First mention of [William Eaton]()'s plan to overthrow [Yusuf Karamanli](), 5 September 1801 (BW1:569)   
+
+# [Convoy]() duty
