lack of convoy ships

--- a/Convoy.page
+++ b/Convoy.page
@@ -1,2 +1,5 @@
 One of the important but boring duties of the American squadron was to convoy American merchant vessels to and from ports in the Mediterranean. This of course took ships away from blockade duty.
 
+## Irritations and delays
+### Lack of ships to perform duty
+- BW1:593: [Richard Dale]() to [William Kirkpatrick](): "it is my wish and Intention to give protection to all American Vessels, Either bound up the Mediterranean or down, as much, as in my Power lays, but the Commanders must have patience, I have to observe to you there is only three Ships of War in those seas at present belonging to the United States, one of them must be kept in or about this place, one off and about Tripoli so you see there is only one to go on the convoy Business."
