--- a/Bryan McDonogh.page
+++ b/Bryan McDonogh.page
@@ -1,1 +1,1 @@
-BW1:567: Signed pass for Greek polacre purportedly used for removing [Murad Reis]() from Gibraltar
+BW1:567: Signed bill of health for Greek polacre purportedly used for removing [Murad Reis]() from Gibraltar
