--- a/People.page
+++ b/People.page
@@ -13,8 +13,9 @@
 
 # Europe
 ## Great Britain
-- [Bryan McDonogh]()
 - [Charles Logie]()
+- [Perkens Magra]()
+- [Bryan McDonogh]()
 - [Lord Elgin]()
 - [James Saumerez]()
 
