--- a/Strategy.page
+++ b/Strategy.page
@@ -32,6 +32,7 @@ Dale wanted to keep a ship off Tripoli at all times (see BW1:521), but this desi
 - Intelligence between ports on how the Tripolitans are trying to thwart the blockade is surprisingly good (see [James Leander Cathcart]()'s circular about the ambassador to Morocco's attempts to smuggle wheat into Tripoli, 11 September 1801, BW1:573-74)
 
 # Coup in Tripoli
+-  [William Eaton]() first proposes a scheme to get [Yusuf Karamanli]() on board an American vessel to capture him? (BW1:567)
 - First mention of [William Eaton]()'s plan to overthrow [Yusuf Karamanli](), 5 September 1801 (BW1:569)   
 
 # [Convoy]() duty
