Nissen as a go-between

--- a/Diplomacy.page
+++ b/Diplomacy.page
@@ -3,3 +3,4 @@
 
 ## Naval officers' relations with Tripoli
 - [Richard Dale]() writes to the bashaw of Tripoli asking to know why he has declared war, but also reminding the bashaw that he as a naval commander has no power to make treaties, 28 July 1801 (BW1:533-534)
+- [Richard Dale]() uses [Nicholas Nissen]() to try to effect a prisoner exchange with [Yusuf Karamanli]() (BW1:568)
