--- a/Relations with other Barbary states.page
+++ b/Relations with other Barbary states.page
@@ -1,2 +1,4 @@
 - [USS *Essex*]() encounters a ship thought to be Tripolitan (because they're wearing turbans!). After firing into the vessel, discovered it to be Moroccan of Tangier. Essex's doctor goes on board the ship to bind up the man wounded by Essex's fire and then both ships go their way. (BW1:551)
 - [Richard Dale]() urges [William Eaton]() to make sure the Tunisians have appropriate papers from the government to avoid detention and capture by the American squadron, since he can't tell Tunisians and Tripolitans apart on sight, and he has not been restrictive enough in the past (BW1:556)
+- [Richard O'Brien]() informs the Secretary of State that Algiers has requested that he issue passports for the crews of the Tripolitan vessels blockaded at Gibraltar by the navy. He declines, reminding the dey that he wouldn't want to set a precedent of breaking the customary blockading practices, as it might come back to bite Algiers. 26 Sept 1801 (BW1:581)
+- 
