--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -20,6 +20,7 @@
 	- Suggests a blockade using a single or a few vessels in front of Algiers during 8 temperate months, as Portugal has done before Gibraltar
 - ASP1FR1:107: Richard O'Brien to TJ, 6/13/1789: Sees treaty-making with Algiers as impolitic while they take so many liberties with the treaties they already have
 - BW1:401: [William Bainbridge]() to Sec of Navy, 17 November 1800: "I do not hesitate in saying, that 6 or 8 frigates in the Mediterranean Sea, would give us more permanent security, than any Treaty that can be made with the States of Barbary."
+- BW1:581: [Richard O'Brien]() to Sec of State, 26 Sept 1801: "we want More frigates in This Sea--and our system with those states at war with the U states should be Severity--Any act of Lenity is considered by Them as -- an act of Timidity"
 
 # Use of payment
 ## Price of settlement
