French prize taking

--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -13,6 +13,8 @@ The navy needed to know where they could reasonably expect a favorable reception
 
 - 15 August 1801: Spanish are actually the ones taking American ships, according to 2Lt. [John Johnson](), on board the [USS *Philadelphia*]() off Gibraltar (BW1:550)
 
+- 28 September 1801: French took several American vessels as prize in the Mediterranean (BW1:585)
+
 # Cooperation amongst European nations
 - BW1:576: [James Leander Cathcart]() discourages a coalition with Sweden, on the basis that he does not want to share the glory and honor of setting an example with the Barbary states (see [Honor]()), 17 September 1801
 
