--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -15,6 +15,8 @@ The navy needed to know where they could reasonably expect a favorable reception
 
 - 28 September 1801: French took several American vessels as prize in the Mediterranean (BW1:585)
 
+- 28 September 1801: [Richard Dale]() writes to the governor of Algeciras (Spain) asking for an explanation of his conduct toward American merchant vessels and his refusal to allow the [USS Philadelphia]() to dock at Algeciras: "it was expected that the United States was at Peace with all the World" (BW1:586)
+
 # Cooperation amongst European nations
 - BW1:576: [James Leander Cathcart]() discourages a coalition with Sweden, on the basis that he does not want to share the glory and honor of setting an example with the Barbary states (see [Honor]()), 17 September 1801
 
