McNeill to France

--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -8,3 +8,4 @@ One of the constant questions for the squadron was whether to get supplies from 
 - BW1:553: [Richard Dale]() discovers that Malta has only water, no stores, so he recommends Syracuse as a place to get supplies
 - BW1:569: [William Bainbridge]() calls at both Malaga and Gibraltar for supplies, but he is unable to get anything but bread and meat--no preserved food (2 September 1801)
     - BW1:570: Bainbridge goes to Algeciras to get supplies but is told by [Samuel Barron]() of the [USS *Philadelphia*]() that he should go to Tangier; when weather prevented entering Tangier, they went to Tetuan instead
+- BW1:587: [Daniel McNeill]() ordered to take minister to a French port, possibly Havre or L'Orient, and get water, bread, and spirits there, Oct. 1, 1801
