--- a/Front Page.page
+++ b/Front Page.page
@@ -22,6 +22,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Honor]()
 - [Engagements with Tripoli]()
 - [Relations with other Barbary states]()
+- [Relations with government at home]()
 
 ## Reference
 - [Important dates]()
